<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/blackborder"
    >
  <TextView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/diffspintitle"
    android:textSize="15dp"
    android:layout_marginTop="40dp"
    android:layout_marginLeft="20dp"
  />
  <Spinner android:id="@+id/spinner_challenge"
    android:layout_width="280dp"
    android:layout_marginLeft="20dp"
    android:layout_height="wrap_content"
    android:drawSelectorOnTop="true"
  />
  <LinearLayout
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal" 
    android:layout_marginTop="20dp"
  > 
  <CheckBox 
      android:id="@+id/iron_man"
 	  android:text="@string/ironman"
 	  android:textSize="15dp"
 	  android:layout_width="wrap_content"
 	  android:layout_height="wrap_content"
 	  android:checked="false"
  />
  </LinearLayout>
  <LinearLayout
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal" 
    android:layout_marginTop="20dp"
  >     
    <Button android:id="@+id/okButton"
      android:layout_width="wrap_content" 
      android:layout_height="wrap_content" 
      android:text="@string/ok"
    />
    <Button android:id="@+id/cancelButton"
      android:layout_width="wrap_content" 
      android:layout_height="wrap_content" 
      android:text="@string/cancel"
    />
  </LinearLayout>
  <LinearLayout
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:layout_marginTop="20dp"
  >
      <Button android:id="@+id/resetMenuButton"
      android:layout_width="wrap_content" 
      android:layout_height="wrap_content" 
      android:text="@string/reset"
      />
  </LinearLayout>      
</LinearLayout>