<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/blueborder"
    >
  <TextView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/charspintitle"
    android:textSize="15dp"
    android:layout_marginTop="30dp"
    android:layout_marginLeft="20dp"
  />
  <Spinner android:id="@+id/spinner_charclass"
    android:layout_width="280dp"
    android:layout_marginLeft="20dp"
    android:layout_height="wrap_content"
    android:drawSelectorOnTop="true"
  />
  <RelativeLayout
    android:id="@+id/samplefield"
    android:layout_width="fill_parent"
    android:layout_height="240dp">   
    <ImageView
    android:id="@+id/portraitsample"  
    android:layout_width="75dp"
    android:layout_height="100dp"
    android:background="@drawable/paizo_fighter"
    android:layout_marginTop="10dp"
    android:layout_marginLeft="20dp">
    </ImageView> 
    <TextView
        android:id="@+id/sampclasstitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/classtit"
        android:textSize="20dp"
        android:layout_toRightOf="@id/portraitsample"
        android:layout_marginLeft="10dp">
    </TextView>  
    <TextView
        android:id="@+id/sampheroclass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fighter"
        android:textSize="20dp"
        android:layout_toRightOf="@id/sampclasstitle"
        android:layout_marginLeft="10dp">
    </TextView>  
    <TextView
        android:id="@+id/sampstrtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strtit"
        android:textSize="20dp"
        android:layout_below="@id/sampclasstitle"
        android:layout_alignLeft="@id/sampclasstitle"
        android:layout_marginTop="10dp">
    </TextView>  
    <TextView
        android:id="@+id/sampstrvalue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="7"
        android:textSize="20dp"
        android:layout_below="@id/sampclasstitle"
        android:layout_toRightOf="@id/sampstrtitle"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp">
    </TextView>
    <TextView
        android:id="@+id/sampdextitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sampstrtitle"
        android:layout_alignLeft="@id/sampstrtitle"
        android:text="@string/dextit"
        android:textSize="20dp" >
    </TextView>  
    <TextView
        android:id="@+id/sampdexvalue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="5"
        android:textSize="20dp"
        android:layout_below="@id/sampstrvalue"
        android:layout_toRightOf="@id/sampdextitle"
        android:layout_marginLeft="10dp">
    </TextView>
    <TextView
        android:id="@+id/sampinttitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sampdextitle"
        android:layout_alignLeft="@id/sampdextitle"
        android:text="@string/inttit"
        android:textSize="20dp" >
    </TextView>  
    <TextView
        android:id="@+id/sampintvalue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="3"
        android:textSize="20dp"
        android:layout_below="@id/sampdexvalue"
        android:layout_toRightOf="@id/sampinttitle"
        android:layout_marginLeft="10dp">
    </TextView>
    <TextView
        android:id="@+id/samphptitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/sampdexvalue"
        android:layout_alignTop="@id/sampdexvalue"
        android:text="@string/hptit"
        android:textSize="20dp" 
        android:layout_marginLeft="30dp">
    </TextView>  
    <TextView
        android:id="@+id/samphpvalue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="10"
        android:textSize="20dp"
        android:layout_toRightOf="@id/samphptitle"
        android:layout_alignTop="@id/samphptitle"
        android:layout_marginLeft="10dp">
    </TextView>
    <TextView
        android:id="@+id/sampnametitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/portraitsample"
        android:layout_alignLeft="@id/portraitsample"
        android:text="@string/charname"
        android:textSize="20dp" 
        android:layout_marginTop="20dp">
    </TextView> 
    <EditText android:id="@+id/sampname"
    	android:layout_width="280dp"
    	android:layout_height="wrap_content" 
    	android:text="Enter Name Here"
    	android:textSize="20dp"
    	android:layout_below="@id/sampnametitle"
        android:layout_alignLeft="@id/sampnametitle">
    </EditText>
    </RelativeLayout> 
  <LinearLayout
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal" 
    android:layout_marginTop="20dp"
  >     
    <Button android:id="@+id/okButton"
      android:layout_width="wrap_content" 
      android:layout_height="wrap_content" 
      android:text="@string/ok"
    />
    <Button android:id="@+id/cancelButton"
      android:layout_width="wrap_content" 
      android:layout_height="wrap_content" 
      android:text="@string/cancel"
    />
  </LinearLayout>    
</LinearLayout>