<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/purpleborder">
    <RelativeLayout
    android:id="@+id/heromain"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">   
      <ImageView
      android:id="@+id/fullportrait"  
      android:layout_width="125dp"
      android:layout_height="190dp"
      android:background="@drawable/paizo_fighter"
      android:layout_marginTop="20dp"
      android:layout_marginLeft="20dp">
      </ImageView> 
      <TextView
        android:id="@+id/mainheroname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Dorian Grey"
        android:textSize="25dp"
        android:layout_toRightOf="@id/fullportrait"
        android:layout_alignTop="@id/fullportrait"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp">
    </TextView> 
    <TextView
        android:id="@+id/mainclasstitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/classtit"
        android:textSize="25dp"
        android:layout_below="@id/mainheroname"
        android:layout_alignLeft="@id/mainheroname"
        android:layout_marginTop="10dp">
    </TextView>  
    <TextView
        android:id="@+id/mainheroclass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fighter"
        android:textSize="25dp"
        android:layout_below="@id/mainheroname"
        android:layout_toRightOf="@id/mainclasstitle"
        android:layout_alignTop="@id/mainclasstitle"
        android:layout_marginLeft="10dp">
    </TextView>  
    <TextView
        android:id="@+id/mainstrtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strtit"
        android:textSize="25dp"
        android:layout_below="@id/mainclasstitle"
        android:layout_alignLeft="@id/mainclasstitle"
        android:layout_marginTop="10dp">
    </TextView>  
    <TextView
        android:id="@+id/mainstrvalue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="7"
        android:textSize="25dp"
        android:layout_below="@id/mainclasstitle"
        android:layout_toRightOf="@id/mainstrtitle"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp">
    </TextView>
    <TextView
        android:id="@+id/maindextitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/mainstrtitle"
        android:layout_alignLeft="@id/mainstrtitle"
        android:text="@string/dextit"
        android:textSize="25dp" >
    </TextView>  
    <TextView
        android:id="@+id/maindexvalue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="5"
        android:textSize="25dp"
        android:layout_below="@id/mainstrvalue"
        android:layout_toRightOf="@id/maindextitle"
        android:layout_marginLeft="10dp">
    </TextView>
    <TextView
        android:id="@+id/maininttitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/maindextitle"
        android:layout_alignLeft="@id/maindextitle"
        android:text="@string/inttit"
        android:textSize="25dp">
    </TextView>  
    <TextView
        android:id="@+id/mainintvalue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="3"
        android:textSize="25dp"
        android:layout_below="@id/maindexvalue"
        android:layout_toRightOf="@id/maininttitle"
        android:layout_marginLeft="10dp">
    </TextView>
    <TextView
        android:id="@+id/mainhptitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/fullportrait"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/hptit"
        android:textSize="20dp" >
    </TextView>  
    <TextView
        android:id="@+id/mainhpvalue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="10"
        android:textSize="20dp"
        android:layout_toRightOf="@id/mainhptitle"
        android:layout_alignTop="@id/mainhptitle"
        android:layout_marginLeft="10dp">
    </TextView>
    <TextView
        android:id="@+id/mainhpdivider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="/"
        android:textSize="20dp"
        android:layout_toRightOf="@id/mainhpvalue"
        android:layout_alignTop="@id/mainhpvalue">
    </TextView>
    <TextView
        android:id="@+id/mainmaxhp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="10"
        android:textSize="20dp"
        android:layout_toRightOf="@id/mainhpdivider"
        android:layout_alignTop="@id/mainhpdivider">
    </TextView>
    <TextView
        android:id="@+id/mainxp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/xptit"
        android:textSize="20dp"
        android:layout_toRightOf="@id/mainmaxhp"
        android:layout_alignTop="@id/mainmaxhp"
        android:layout_marginLeft="60dp">
    </TextView>
    <TextView
        android:id="@+id/heroxp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="2"
        android:textSize="20dp"
        android:layout_toRightOf="@id/mainxp"
        android:layout_alignTop="@id/mainxp"
        android:layout_marginLeft="10dp">
    </TextView>

    <TextView
        android:id="@+id/mainspinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/mainhptitle"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/specspintitle"
        android:textSize="15dp" >
    </TextView>
    <Spinner android:id="@+id/spinner_main"
    android:layout_width="280dp"
    android:layout_height="wrap_content"
    android:drawSelectorOnTop="true"
    android:textSize="8dp"
    android:layout_below="@id/mainspinner"
    android:layout_marginLeft="20dp"/>
    <Button
        android:id="@+id/btnexplore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/explore"
        android:textSize="25dp"
        android:layout_below="@id/spinner_main"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="30dp">
    </Button>
    <Button
        android:id="@+id/btnbattle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/battle"
        android:textSize="25dp"
        android:layout_toRightOf="@id/btnexplore"
        android:layout_alignTop="@id/btnexplore"
        android:layout_marginLeft="30dp">
    </Button>
    </RelativeLayout>
</FrameLayout>