<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <RelativeLayout    
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <ImageView
    android:id="@+id/hero"  
    android:layout_width="fill_parent"
    android:layout_height="240dp"
    android:background="@drawable/greenborder">
    </ImageView>
    <ImageView
    android:id="@+id/monster"  
    android:layout_width="fill_parent"
    android:layout_height="240dp"
    android:layout_below="@id/hero"
    android:background="@drawable/redborder">
    </ImageView>
  </RelativeLayout>
  <RelativeLayout
    android:id="@+id/herofield"
    android:layout_width="fill_parent"
    android:layout_height="240dp">   
    <ImageView
    android:id="@+id/portraithero"  
    android:layout_width="75dp"
    android:layout_height="75dp"
    android:background="@drawable/paizo_fighter"
    android:layout_marginTop="10dp"
    android:layout_marginLeft="10dp">
    </ImageView> 
    <TextView
        android:id="@+id/heroname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Dorian the Grey"
        android:textSize="25dp"
        android:layout_toRightOf="@id/portraithero"
        android:layout_alignTop="@id/portraithero"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp">
    </TextView> 
    <TextView
        android:id="@+id/classtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/classtit"
        android:textSize="20dp"
        android:layout_below="@id/heroname"
        android:layout_alignLeft="@id/heroname"
        android:layout_marginLeft="10dp">
    </TextView>  
    <TextView
        android:id="@+id/heroclass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fighter"
        android:textSize="20dp"
        android:layout_below="@id/heroname"
        android:layout_toRightOf="@id/classtitle"
        android:layout_marginLeft="10dp">
    </TextView>  
    <TextView
        android:id="@+id/strtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strtit"
        android:textSize="20dp"
        android:layout_below="@id/classtitle"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp">
    </TextView>  
    <TextView
        android:id="@+id/strvalue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="7"
        android:textSize="20dp"
        android:layout_below="@id/classtitle"
        android:layout_toRightOf="@id/strtitle"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp">
    </TextView>
    <TextView
        android:id="@+id/dextitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/strtitle"
        android:layout_marginLeft="50dp"
        android:text="@string/dextit"
        android:textSize="20dp" >
    </TextView>  
    <TextView
        android:id="@+id/dexvalue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="5"
        android:textSize="20dp"
        android:layout_below="@id/strvalue"
        android:layout_toRightOf="@id/dextitle"
        android:layout_marginLeft="10dp">
    </TextView>
    <TextView
        android:id="@+id/inttitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dextitle"
        android:layout_marginLeft="50dp"
        android:text="@string/inttit"
        android:textSize="20dp" >
    </TextView>  
    <TextView
        android:id="@+id/intvalue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="3"
        android:textSize="20dp"
        android:layout_below="@id/dexvalue"
        android:layout_toRightOf="@id/inttitle"
        android:layout_marginLeft="10dp">
    </TextView>
    <TextView
        android:id="@+id/hptitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/dexvalue"
        android:layout_alignTop="@id/dexvalue"
        android:layout_marginLeft="40dp"
        android:text="@string/hptit"
        android:textSize="30dp" >
    </TextView>  
    <TextView
        android:id="@+id/hpvalue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="10"
        android:textSize="30dp"
        android:layout_toRightOf="@id/hptitle"
        android:layout_alignTop="@id/hptitle"
        android:layout_marginLeft="10dp">
    </TextView>
    <TextView
        android:id="@+id/hpdivider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="/"
        android:textSize="30dp"
        android:layout_toRightOf="@id/hpvalue"
        android:layout_alignTop="@id/hpvalue">
    </TextView>
    <TextView
        android:id="@+id/maxhp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="10"
        android:textSize="30dp"
        android:layout_toRightOf="@id/hpdivider"
        android:layout_alignTop="@id/hpdivider">
    </TextView>
    <Button
        android:id="@+id/btnattack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/attack"
        android:layout_below="@id/intvalue"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="75dp">
    </Button>
    <Button
        android:id="@+id/btnspecial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/special"
        android:layout_toRightOf="@id/btnattack"
        android:layout_alignTop="@id/btnattack"
        android:layout_marginLeft="10dp">
    </Button>
    </RelativeLayout> 
    <RelativeLayout
    	android:id="@+id/monsterfield"
    	android:layout_width="fill_parent"
    	android:layout_height="240dp"
    	android:layout_below="@id/herofield">   
    <ImageView
    	android:id="@+id/portraitmon"  
    	android:layout_width="75dp"
    	android:layout_height="75dp"
    	android:background="@drawable/goblintreasure"
    	android:layout_marginTop="10dp"
    	android:layout_marginLeft="10dp">
    </ImageView> 
    <TextView
        android:id="@+id/monsname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Goblin Raider"
        android:textSize="25dp"
        android:layout_toRightOf="@id/portraitmon"
        android:layout_alignTop="@id/portraitmon"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp">
    </TextView> 
    <TextView
        android:id="@+id/monclass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/classtit"
        android:textSize="20dp"
        android:layout_below="@id/monsname"
        android:layout_alignLeft="@id/monsname"
        android:layout_marginLeft="10dp">
    </TextView>  
    <TextView
        android:id="@+id/classmon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minion"
        android:textSize="20dp"
        android:layout_below="@id/monsname"
        android:layout_toRightOf="@id/monclass"
        android:layout_marginLeft="10dp">
    </TextView>   
    <TextView
        android:id="@+id/strtitlemon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strtit"
        android:textSize="25dp"
        android:layout_below="@id/monclass"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="30dp">
    </TextView>  
    <TextView
        android:id="@+id/strvaluemon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="5"
        android:textSize="25dp"
        android:layout_below="@id/monclass"
        android:layout_toRightOf="@id/strtitlemon"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp">
    </TextView>
    <TextView
        android:id="@+id/dextitlemon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/strtitlemon"
        android:layout_marginLeft="50dp"
        android:text="@string/dextit"
        android:textSize="25dp" >
    </TextView>  
    <TextView
        android:id="@+id/dexvaluemon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="7"
        android:textSize="25dp"
        android:layout_below="@id/strvaluemon"
        android:layout_toRightOf="@id/dextitlemon"
        android:layout_marginLeft="10dp">
    </TextView>
    <TextView
        android:id="@+id/inttitlemon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dextitlemon"
        android:layout_marginLeft="50dp"
        android:text="@string/inttit"
        android:textSize="25dp" >
    </TextView>  
    <TextView
        android:id="@+id/intvaluemon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="3"
        android:textSize="25dp"
        android:layout_below="@id/dexvaluemon"
        android:layout_toRightOf="@id/inttitlemon"
        android:layout_marginLeft="10dp">
    </TextView>
    <TextView
        android:id="@+id/monhptitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/dexvaluemon"
        android:layout_alignTop="@id/dexvaluemon"
        android:layout_marginLeft="40dp"
        android:text="@string/hptit"
        android:textSize="30dp" >
    </TextView>  
    <TextView
        android:id="@+id/monhpvalue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="10"
        android:textSize="30dp"
        android:layout_toRightOf="@id/monhptitle"
        android:layout_alignTop="@id/monhptitle"
        android:layout_marginLeft="10dp">
    </TextView>
    <TextView
        android:id="@+id/monhpdivider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="/"
        android:textSize="30dp"
        android:layout_toRightOf="@id/monhpvalue"
        android:layout_alignTop="@id/monhpvalue">
    </TextView>
    <TextView
        android:id="@+id/monmaxhp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="10"
        android:textSize="30dp"
        android:layout_toRightOf="@id/monhpdivider"
        android:layout_alignTop="@id/monhpdivider">
    </TextView> 
    </RelativeLayout> 
</RelativeLayout>